# core-modules

./: .gitignore  .gitlab-ci.yml  .gitmodules  LICENSE  README.md  requirements.txt  tox.ini
babyrobot/api/: audio_sub.py  config.py  consumer.py  producer.py  test_requests.py  timer.py  utils.py  v1.py
babyrobot/asr/: README.md  client.py  config.py  gcloud.py  kaldi_gst_client.py  utils.py
babyrobot/concept_net/: client.py  config.py
babyrobot/emorec/: client.py  config.py  utils.py
babyrobot/emorec_pytorch/: client.py  config.py  dataset.py  main.py  train.py
babyrobot/lib/: config.py  utils.py
babyrobot/objectrec/: README.md  client.py  config.py  (+4 more)
babyrobot/src/object-assembly-agent-master/object_assembly_msgs/: CMakeLists.txt  package.xml
babyrobot/src/object-assembly-agent-master/object_assembly_msgs/msg/: ConnectionInfo.msg  ConnectionInfoList.msg  ConnectionVector.msg  HSVRanges.msg  Input.msg  PointCloudArray.msg  Points2D.msg  SurfaceParameters.msg
babyrobot/src/object-assembly-agent-master/object_assembly_msgs/srv/: FetchForegroundMask.srv  FetchPCLs.srv  FetchPCLsGivenLocations.srv  FetchSurfaceParams.srv  TrackObject.srv
dockerfiles/: Dockerfile  Dockerfile.objectrec  id_rsa_docker  id_rsa_docker.pub  run_services.sh
docs/: Makefile  make.bat
lib/: utils.py
opensmile_config/: README.md  emobase.conf  utterance_level.conf
sums-of-numbers-game/: README.md  card.py  card_utils.py  check_pickle_insides.py  config.py  emorec_game.py  events.py  events.txt  prepare_sum_objects.py  run_all_games.py  sums_game.py  sums_game_utils.py
(+395 files in other folders)
