<?xml version="1.0"?>
<package>
  <name>object_assembly_msgs</name>
  <version>0.0.0</version>
  <description>The object_assembly_msgs package</description>

  <maintainer email="jack103@windowslive.com">Jack Hadfield</maintainer>

  <license>GPL</license>

  <url type="website">TODO</url>

  <author email="jack103@windowslive.com">Jack Hadfield</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>

  <run_depend>std_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>

  <export>
    <!-- <metapackage/> -->
  </export>
</package>
